--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Test and deploy
 
 on:
   push:
@@ -27,3 +27,21 @@ jobs:
 
       - name: Test!
         run: make test
+
+      - name: Deploy to "production" branch
+        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+        run: |
+          rm -rf /tmp/out && mkdir -p /tmp/out
+          cp lib/resty/limit/*.lua /tmp/out/
+          git config --global user.email "noreply@github.com"
+          git config --global user.name "GitHub Actions"
+          if git ls-remote --exit-code --heads origin production; then
+            git checkout production
+          else
+            git checkout --orphan production
+            git rm -rf .
+          fi
+          mv /tmp/out/* .
+          git add .
+          git commit -m "Deployed from GitHub Actions"
+          git push origin production
