--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install Deps
         run: |
@@ -41,6 +43,7 @@ jobs:
             git checkout --orphan production
             git rm -rf .
           fi
+          rm -rf t/
           mv /tmp/out/* .
           git add .
           git commit -m "Deployed from GitHub Actions"
